plugins {
    id 'java'
    id 'application'
}

group 'code.shbham'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    applicationDefaultJvmArgs = [
            '-XX:-RestrictContended',
            '-XX:ContendedPaddingWidth=64'
    ]
}

repositories {
    mavenCentral()
}

dependencies {
    implementation (
        'com.google.code.gson:gson:2.14.0',
        'org.jctools:jctools-core:4.0.6',
        'org.openjdk.jmh:jmh-core:1.37',
        'org.jsoup:jsoup:1.22.2'
    )

    annotationProcessor(
        'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    )

    testImplementation platform('org.junit:junit-bom:6.0.3')
    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.3'
}

test {
    useJUnitPlatform()
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1

    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = false
    }
}

tasks.withType(Test) {
    jvmArgs '-XX:-RestrictContended', '-XX:ContendedPaddingWidth=64'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.vm.annotation=ALL-UNNAMED']
}
